--- a/src/plugins/sources/history.desktop
+++ b/src/plugins/sources/history.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Type=Link
-Name=history
+Name=History launcher
 Name[ru]=ÐÑÑÐ¾ÑÐ¸Ñ
 Name[eo]=Historio
-Name[cs]=historie
-Name[sk]=história
+Name[cs]=Historie aplikací
+Name[sk]=História aplikácií
 Comment=An application history launcher source plugin
 Comment[ru]=ÐÐ»Ð°Ð³Ð¸Ð½ Ð´Ð»Ñ Ð·Ð°Ð¿ÑÑÐºÐ° Ð¿ÑÐ¸Ð»Ð¾Ð¶ÐµÐ½Ð¸Ð¹ Ð¸Ð· ÑÐ¿Ð¸ÑÐºÐ° Ð¸ÑÑÐ¾ÑÐ¸Ð¸
 Comment[cs]=Zdrojový plugin - historie pøíkazù
