--- a/src/plugins/sources/winlist.desktop
+++ b/src/plugins/sources/winlist.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Type=Link
-Name=winlist
+Name=Window list
 Name[ru]=ÑÐ¿Ð¸ÑÐ¾Ðº Ð¾ÐºÐ¾Ð½
-Name[eo]=fenestrolisto
-Name[cs]=seznam_oken
-Name[sk]=zoznam_okien
+Name[eo]=Fnestrolisto
+Name[cs]=Seznam oken
+Name[sk]=Zoznam okien
 Comment=A window list source plugin
 Comment[ru]=ÐÐ»Ð°Ð³Ð¸Ð½ ÑÐ¿Ð¸ÑÐºÐ° Ð¾ÐºÐ¾Ð½
 Comment[cs]=Zdrojový plugin - seznam oken
