--- a/src/plugins/views/list.desktop
+++ b/src/plugins/views/list.desktop
@@ -1,12 +1,12 @@
 [Desktop Entry]
 Type=Link
 Name=List
-Name[ru]=Ð¡Ð¿Ð¸ÑÐ¾Ðº
+Name[ru]=Список
 Name[eo]=Listo
 Name[cs]=Seznam
 Name[sk]=Zoznam
 Comment=A list representation of elements
-Comment[ru]=Ð Ð°ÑÐ¿Ð¾Ð»Ð¾Ð¶ÐµÐ½Ð¸Ðµ ÑÐ»ÐµÐ¼ÐµÐ½ÑÐ¾Ð² ÑÐ¿Ð¸ÑÐºÐ¾Ð¼.
+Comment[ru]=Расположение элементов списком
 Comment[cs]=Seznamové zobrazení
 Comment[eo]=Lista prezentado de elementoj
 Comment[it]=Rappresentazione ad elenco degli elementi
