--- a/src/plugins/sources/directory_watcher.desktop
+++ b/src/plugins/sources/directory_watcher.desktop
@@ -1,16 +1,15 @@
 [Desktop Entry]
 Type=Link
 Name=Directory watcher
-Name[ru]=ÑÐ¼Ð¾ÑÑÐ¸ÑÐµÐ»Ñ_Ð¿Ð°Ð¿ÐºÐ¸
+Name[ru]=Cмотритель_папки
 Name[eo]=Dosierujo atentilo
 Name[cs]=Zobrazení adresáře
 Name[sk]=Zobrazenie adresára
 Comment=A directory watcher source plugin
-Comment[ru]=ÐÐ»Ð°Ð³Ð¸Ð½ Ð´Ð»Ñ Ð½Ð°Ð±Ð»ÑÐ´ÐµÐ½Ð¸Ñ Ð·Ð° Ð¿Ð°Ð¿ÐºÐ¾Ð¹
-Comment[cs]=Zdrojový plugin - hlídaè sloek
+Comment[ru]=Плагин для наблюдения за папкой
+Comment[cs]=Zdrojový plugin - hlídač složek
 Comment[eo]=KromaÄµo kiu atentas la enhavon de dosierujo
 Comment[it]=Un plugin per il controllo di directory
-Comment[cs]=Rozšíření pro zobrezní súborů adresáře
 Comment[sk]=Rozšírenie pre zobraznie súborov v adresári
 
 X-Drawer-Title=Directory Watcher
