--- a/src/plugins/sources/history.desktop
+++ b/src/plugins/sources/history.desktop
@@ -1,14 +1,14 @@
 [Desktop Entry]
 Type=Link
 Name=History launcher
-Name[ru]=ÐÑÑÐ¾ÑÐ¸Ñ
+Name[ru]=История
 Name[eo]=Historio
 Name[cs]=Historie aplikací
 Name[sk]=História aplikácií
 Comment=An application history launcher source plugin
-Comment[ru]=ÐÐ»Ð°Ð³Ð¸Ð½ Ð´Ð»Ñ Ð·Ð°Ð¿ÑÑÐºÐ° Ð¿ÑÐ¸Ð»Ð¾Ð¶ÐµÐ½Ð¸Ð¹ Ð¸Ð· ÑÐ¿Ð¸ÑÐºÐ° Ð¸ÑÑÐ¾ÑÐ¸Ð¸
+Comment[ru]=Плагин для запуска приложений из списка истории
 Comment[cs]=Zdrojový plugin - historie pøíkazù
-Comment[eo]=LanÄilo de aplikaÄµoj memoritaj.
+Comment[eo]=Lanĉilo de aplikaĵoj memoritaj.
 Comment[it]=Un plugin per uno storico del lancio applicazioni
 Comment[cs]=Rozšíření pro zobrazení historie spuštěných aplikací
 Comment[sk]=Rozšírenie pre zobrazenie histórie spustených aplikácií
