--- a/src/plugins/sources/directory_watcher.desktop
+++ b/src/plugins/sources/directory_watcher.desktop
@@ -1,15 +1,15 @@
 [Desktop Entry]
 Type=Link
 Name=Directory watcher
-Name[ru]=Cмотритель_папки
+Name[ru]=Cмотритель папки
 Name[eo]=Dosierujo atentilo
 Name[cs]=Zobrazení adresáře
 Name[sk]=Zobrazenie adresára
 Comment=A directory watcher source plugin
 Comment[ru]=Плагин для наблюдения за папкой
-Comment[cs]=Zdrojový plugin - hlídač složek
 Comment[eo]=KromaÄµo kiu atentas la enhavon de dosierujo
 Comment[it]=Un plugin per il controllo di directory
+Comment[cs]=Rozšíření pro zobrazení souborů v adresáři
 Comment[sk]=Rozšírenie pre zobraznie súborov v adresári
 
 X-Drawer-Title=Directory Watcher
