Plugins names have to match with makefile

--- a/src/plugins/sources/directory_watcher.desktop
+++ b/src/plugins/sources/directory_watcher.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Link
-Name=Directory watcher
+Name=directory_watcher
 Name[ru]=Cмотритель папки
 Name[eo]=Dosierujo atentilo
 Name[cs]=Zobrazení adresáře
