--- a/src/plugins/sources/directory_watcher.desktop
+++ b/src/plugins/sources/directory_watcher.desktop
@@ -10,6 +10,6 @@ Comment[ru]=Плагин для наблюдения за папкой
 Comment[eo]=KromaÄµo kiu atentas la enhavon de dosierujo
 Comment[it]=Un plugin per il controllo di directory
 Comment[cs]=Rozšíření pro zobrazení souborů v adresáři
-Comment[sk]=Rozšírenie pre zobraznie súborov v adresári
+Comment[sk]=Rozšírenie pre zobrazenie súborov v adresári
 
 X-Drawer-Title=directory_watcher
