--- a/src/plugins/views/grid.desktop
+++ b/src/plugins/views/grid.desktop
@@ -10,6 +10,6 @@ Comment[ru]=Расположение элементов сеткой
 Comment[eo]=Krada prezentado de elementoj
 Comment[it]=Rappresentazione in griglia degli elementi
 Comment[cs]=Položky zobrazit v tabulce
-Comment[sk]=Položky zobraziř v mriežke
+Comment[sk]=Položky zobraziť v mriežke
 
 X-Drawer-Title=grid
