--- a/module.desktop.in
+++ b/module.desktop.in
@@ -14,7 +14,7 @@ Comment[de]=Helfer, der als Datenablage fungiert.
 Comment[el]=Ένα συστατικό που λειτουργεί ως χώρος αποθήκευσης δεδομένων.
 Comment[eo]=Akcesoraĵo kiu agas kiel recivilo.
 Comment[fr]=Un gadget faisant office de réceptacle.
-Comment[it]=Un modulo che fa da contenitore per dati.
+Comment[it]=Un gadget che fa da contenitore per dati.
 Comment[pt]=Um Gadget que atua como um contentor de dados.
 Comment[ru]=Гаджет, который действует как контейнер для данных.
 Comment[sk]=Gadget slúžiaci ako kontajner pre rôzne zobrazenia dát.
