--- a/module.desktop
+++ b/module.desktop
@@ -4,6 +4,7 @@ Name=Drawer
 Name[de]=Ablage
 Name[el]=Συρτάρι
 Name[eo]=Entenilo
+Name[es]=Cajón
 Name[fr]=Tiroir
 Name[pl]=Szuflada
 Name[pt]=Gaveta
@@ -14,6 +15,7 @@ Comment[cs]=Gadget sloužící jako kontejner pro data.
 Comment[de]=Helfer, der als Datenablage fungiert.
 Comment[el]=Ένα συστατικό που λειτουργεί ως χώρος αποθήκευσης δεδομένων.
 Comment[eo]=Akcesoraĵo kiu agas kiel recivilo.
+Comment[es]=Un Gadget que actúa como contenedor de datos.
 Comment[fr]=Un gadget faisant office de réceptacle.
 Comment[it]=Un gadget che fa da contenitore per dati.
 Comment[pl]=Gadżet pełniący rolę pojemnika na dane.
