added Malayalam translation (module.desktop)

--- a/module.desktop
+++ b/module.desktop
@@ -6,6 +6,7 @@ Name[el]=Συρτάρι
 Name[eo]=Entenilo
 Name[es]=Cajón
 Name[fr]=Tiroir
+Name[ml]=ഡ്രോയർ
 Name[pl]=Szuflada
 Name[pt]=Gaveta
 Name[ru]=Ящик
@@ -18,6 +19,7 @@ Comment[eo]=Akcesoraĵo kiu agas kiel recivilo.
 Comment[es]=Un Gadget que actúa como contenedor de datos.
 Comment[fr]=Un gadget faisant office de réceptacle.
 Comment[it]=Un gadget che fa da contenitore per dati.
+Comment[ml]=ഡാറ്റ ഉൾക്കൊള്ളുന്നതിനുള്ള ഒരു കണ്ടെയ്‌നറായി പ്രവർത്തിക്കുന്ന ഒരു ഗാഡ്‌ജെറ്റ്.
 Comment[pl]=Gadżet pełniący rolę pojemnika na dane.
 Comment[pt]=Um Gadget que atua como um contentor de dados.
 Comment[ru]=Гаджет, который действует как контейнер для данных.
