Introducing pt_BR translations

--- a/module.desktop
+++ b/module.desktop
@@ -9,6 +9,7 @@ Name[fr]=Tiroir
 Name[ml]=ഡ്രോയർ
 Name[pl]=Szuflada
 Name[pt]=Gaveta
+Name[pt_BR]=Gaveta
 Name[ru]=Ящик
 Icon=e-module-drawer
 Comment=A Gadget that acts as a container for data.
@@ -21,6 +22,7 @@ Comment[fr]=Un gadget faisant office de réceptacle.
 Comment[it]=Un gadget che fa da contenitore per dati.
 Comment[ml]=ഡാറ്റ ഉൾക്കൊള്ളുന്നതിനുള്ള ഒരു കണ്ടെയ്‌നറായി പ്രവർത്തിക്കുന്ന ഒരു ഗാഡ്‌ജെറ്റ്.
 Comment[pl]=Gadżet pełniący rolę pojemnika na dane.
+Comment[pt]=Um Gadget que atua como um contentor de dados.
 Comment[pt]=Um Gadget que atua como um contentor de dados.
 Comment[ru]=Гаджет, который действует как контейнер для данных.
 Comment[sk]=Gadget slúžiaci ako kontajner pre rôzne zobrazenia dát.
