desktop module updated

--- a/module.desktop
+++ b/module.desktop
@@ -11,6 +11,7 @@ Name[pl]=Szuflada
 Name[pt]=Gaveta
 Name[pt_BR]=Gaveta
 Name[ru]=Ящик
+Name[hi]=द्रावर
 Icon=e-module-drawer
 Comment=A Gadget that acts as a container for data.
 Comment[cs]=Gadget sloužící jako kontejner pro data.
@@ -26,4 +27,5 @@ Comment[pt]=Um Gadget que atua como um contentor de dados.
 Comment[pt]=Um Gadget que atua como um contentor de dados.
 Comment[ru]=Гаджет, который действует как контейнер для данных.
 Comment[sk]=Gadget slúžiaci ako kontajner pre rôzne zobrazenia dát.
+Comment[hi]=एक गैजेट जो डेटा के लिए कंटेनर के रूप में कार्य करता है.
 X-Enlightenment-ModuleType=utils
